test/pass/arrayaritm.min
program
    array x
start
    3 - x !
end
