test/fail/void.min
program
    function void x do "hello" !
start   
    x + 123 !
end
